force-app/main/default/objects/Fsm_TMA__mdt/Fsm_TMA__mdt.object-meta.xml
<CustomObject>
    <description>Created as part of  SFS-8937</description>
    <label>TMA Permit</label>
    <pluralLabel>TMA</pluralLabel>
</CustomObject>