force-app/main/default/objects/Fsm_TMA__mdt/fields/FSM_TMAActualStart__c.field-meta.xml
<CustomField>
    <fullName>FSM_TMAActualStart__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFS-8937</description>
    <label>TMA Actual Start</label>
    <type>Checkbox</type>
</CustomField>