force-app/main/default/objects/Fsm_TMA__mdt/fields/FSM_TMAApprovalStatusCode__c.field-meta.xml
<CustomField>
    <fullName>FSM_TMAApprovalStatusCode__c</fullName>
    <description>Created as part of SFS-8937</description>
    <label>TMA Approval Status Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRTD</fullName>
                <label>Created</label>
            </value>
            <value>
                <fullName>FPI</fullName>
                <label>Forward Planning</label>
            </value>
            <value>
                <fullName>API</fullName>
                <label>Advanced Planning</label>
            </value>
            <value>
                <fullName>RPA</fullName>
                <label>PAA Requested</label>
            </value>
            <value>
                <fullName>PADP</fullName>
                <label>PAA Deemed Approved</label>
            </value>
            <value>
                <fullName>PAA</fullName>
                <label>PAA Approved</label>
            </value>
            <value>
                <fullName>PLND</fullName>
                <label>Planned Work</label>
            </value>
            <value>
                <fullName>RP</fullName>
                <label>Permit Applied For</label>
            </value>
            <value>
                <fullName>PVAR</fullName>
                <label>Permit Variation Applied For</label>
            </value>
            <value>
                <fullName>PDP</fullName>
                <label>Permit Deemed Approved</label>
            </value>
            <value>
                <fullName>PA</fullName>
                <label>Permit Approved</label>
            </value>
            <value>
                <fullName>PRF</fullName>
                <label>Permit Refused</label>
            </value>
            <value>
                <fullName>PREV</fullName>
                <label>Permit Revoked (Prpsd Works)</label>
            </value>
            <value>
                <fullName>CANC</fullName>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>WIP</fullName>
                <label>Works in Progress</label>
            </value>
            <value>
                <fullName>COMP</fullName>
                <label>Work Complete</label>
            </value>
            <value>
                <fullName>PHCO</fullName>
                <label>Phase Complete</label>
            </value>
            <value>
                <fullName>PRRE</fullName>
                <label>Partial Reinst</label>
            </value>
            <value>
                <fullName>IREI</fullName>
                <label>INTR Reinstated</label>
            </value>
            <value>
                <fullName>PREI</fullName>
                <label>PERM Reinstated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>